cedar-lean/UnitTest/parser_tests/negative/invalid_slot_name.cedar
permit(principal == ?action, action, resource);
